Initial data source commit.

--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -1,2 +1,10 @@
 # Data sources
 
+## Arrest Data
+
+Arrest data from the city of New York from 2006 to the present will serve as our primary dataset. The data is obtained from these locations:
+
+1. 2006 - Jan 1st 2021: https://data.cityofnewyork.us/Public-Safety/NYPD-Arrests-Data-Historic-/8h9b-rp9u 
+2. Jan 1st 2021 – Present: https://data.cityofnewyork.us/Public-Safety/NYPD-Arrest-Data-Year-to-Date-/uip8-fykc 
+
+This data has a number of interesting features, such as geographical data regarding where the arrest was made, crime related to the arrest, and various pieces of demographic data associated with the apprehended person. The various crime statistics, as well as location information, will allow us to plot out trends in arrests over various factors, and effectively connect these factors with other datasets.
