--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -104,7 +104,7 @@ visna_na_plot <-
 
 ## Importing the Arrests Dataset
 
-We are now ready to look out our dataset. First, we import the data from its source: 
+We are now ready to look out our dataset. The main dataset for our projec is data on New York City arrests which can be found at the link below. First, we import the data from its source: 
 
 ```{r}
 nyc_arrests <- read.table("https://data.cityofnewyork.us/api/views/uip8-fykc/rows.csv?accessType=DOWNLOAD",
@@ -114,14 +114,26 @@ nyc_arrests <- read.table("https://data.cityofnewyork.us/api/views/uip8-fykc/row
                           )
 ```
 
+
 ## Visualizing the Missing Values
 
-Our last step will be to look at our dataset for missing values.
+Now that we have imported our data, our last step will be to look at our dataset for missing values. Before visualizing our missing values, we noticed that some of the entries in the data had empty strings (""), but were not classified as NA in the dataset. Since we felt these empty strings were the equivalent of NA, we changed them in our dataset before plotting our missing values.
 
 ```{r}
-names(nyc_arrests) <- abbreviate(names(nyc_arrests),minlength=3)
-visna_na_plot(nyc_arrests)
-visna_na_plot(nyc_arrests, percent = TRUE)
+#First replace "" with NA
+nyc_arrests2 <- nyc_arrests %>%
+  na_if("")
+#Abbreviate names to make it easier to read
+names(nyc_arrests2) <- abbreviate(names(nyc_arrests2),minlength=3)
+#Plot NA patterns
+visna_na_plot(nyc_arrests2)
+```
+From the first plot, we can see that there are 4 different patterns in our data with the most common pattern being no missing data. The plot above shows that there is not too much missing data in our dataset, but there are still a few variables that had missing data. The most common pattern where there was missing data is for just `LAW_CA` to be missing, and this happened around 1000 times in our dataset. `LAW_CA` is the level of the offense (felony, misdemeanor or violation), so it seems this is not always documented when the arrest occurs. The second most common pattern where data was missing was for the data to be missing `KY_`, `OFN`, and `PD_D`. This pattern was far less common and occurred under 100 times out of the 115,299 observations in the data. `KY_` is an internal classification keycode,  `OFN` is a description of internal classification, and `PD_D` is a description of internal classification that is more granular than `OFN`. It seems that on occasion these codes and descriptions were not filled in when the arrest was made. The final pattern contains `KY_`, `OFN`, `PD_D` again, but also contains `PD_C`. `PD_C` is another internal classification code that is more granular than `KY_`. This pattern is very similar to previous one, but contains another missing variable that is similar to the others. We also want to plot our missing data showing percentage missing instead of number of rows missing.
+
+```{r}
+#Plot NA patterns with percentages
+visna_na_plot(nyc_arrests2, percent = TRUE)
 ```
 
-As we can see from the percentage visualization, there are only a small number of rows missing one of two columns: KY_CD (Key code), which is a generalized classification code, and PD_CD (Police Department code), which is a more granular code.
+The patterns are the same as the plot above, but this plot emphasizes the limited amount of missing data in our dataset. The portion of missing data is very small for our dataset which is a good sign for our analysis. If there is a too much missing data, the analysis can be much more challenging, but this is not the case with our NYC arrests data.
+
