--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -11,6 +11,8 @@ This data is collected by the NYPD and made available through New York City Open
 
 This data has a number of interesting features, such as geographical data regarding where the arrest was made, crime related to the arrest, and various pieces of demographic data associated with the apprehended person. The various crime statistics, as well as location information, will allow us to plot out trends in arrests over various factors, and effectively connect these factors with other datasets.
 
+For this analysis, we will limit our data to the last 10 years, starting on January 1st, 2011.
+
 ## Crime Data
 
 Data on crimes reported in New York City will serve as a check against our general assumption that crime correlates strongly with arrests. This data is obtained from https://data.ny.gov/Public-Safety/Index-Crimes-by-County-and-Agency-Beginning-1990/ca8h-8gjq , and is maintained by the New York State Division of Criminal Justice Services.
