Refined visual and explanation. Need to get clarity on why exactly there are more arrests than reports for murder.

--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -19,4 +19,4 @@ Data on crimes reported in New York City will serve as a check against our gener
 
 This dataset, which spans the years 1990 to 2020, provides summary crime statistics for each New York county in each year. It provides aggregated values for the numbers of crimes committed in various categories over the given calendar year. One shortcoming with this dataset is its lack of granularity. Annual, county-level data is good, but it does limit the dataset's usefulness for considering crime demographics, and does not allow for comparing crime rates during particular times of the year.
 
-Another point to note regarding this dataset is classification. The definition of rape applied to categorize these crimes was altered in the year 2015 (https://www.criminaljustice.ny.gov/crimnet/ojsa/stats.htm). As a result, comparisons made before and after 2015 should be mindful an uptick in crimes of this category is certainly related to some degree with this change in classification technique.
+Another point to note regarding this dataset is classification. The definition of rape applied to categorize these crimes was altered in the year 2015 (https://www.criminaljustice.ny.gov/crimnet/ojsa/stats.htm). As a result, comparisons made before and after 2015 should be mindful an uptick in crimes of this category is certainly related to some degree with this change in classification technique. Current definitions for the various crimes found in the dataset can be found here: https://ucr.fbi.gov/crime-in-the-u.s/2017/crime-in-the-u.s.-2017/topic-pages/offense-definitions
