--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -1,5 +1,39 @@
 # Results
 
+In this section, we will be sharing the results of exploratory analysis with our data. We will be focusing on the findings that we found most interesting during this process while also trying to provide some insight into some of the questions of interest mentioned at the beginning of this project. To start, we made some basic bar charts to get a better understanding of the arrests occuring in New York City. First, we looked at how the number of arrests has changed over the past 10 years. 
+
+```{r, message = FALSE, warning = FALSE}
+nyc_arrests_year <- nyc_arrests_combined %>%
+  mutate(ARREST_YEAR = format(ARREST_DATE, format = "%Y")) %>%
+  group_by(ARREST_YEAR) %>%
+  summarize(Number_Arrests = n()) %>%
+  mutate(Number_Arrests = Number_Arrests/100000)
+
+ggplot(data = nyc_arrests_year, aes(x = ARREST_YEAR, y = Number_Arrests)) + geom_col() +
+  labs(title = "Number of Arrests by Year",
+       x = "Year",
+       y = "Number of Arrests (in Hundred Thousands)")
+```
+
+From the plot above, we can see that the number of arrests has decreased each year for the past 10 years. The decrease in arrests is very significant as well since there were over 400,000 arrests in 2011 while there were under 150,000 arrests in 2020 and just over 100,000 arrests so far in 2021. It seems likely that the impact of COVID-19 has helped decrease the number of arrests in 2020 and 2021, especially in 2020 with so many things being shutdown. It will be interesting to see if the number of arrests in 2021 is larger than the 2020 which would be a deviation from the trend of arrests going down. While this plot indicates progress in terms of safety in New York, it will be interesting to see if the number of crimes has dropped significantly as well. If arrests are going down, but crimes are not, then this would indicate that the city is not actually safer, but instead people are getting away with more crimes. 
+
+We also want to look at the types of arrests that are occurring in New York City. The three types of arrests according to the data dictionary are felonies, misdemeanors, and violations. A bar plot showing how common each arrest type has been over the past 10 years is below. 
+
+```{r, message = FALSE, warning = FALSE}
+nyc_arrests_type <- nyc_arrests_combined %>%
+  group_by(LAW_CAT_CD) %>%
+  summarize(Number_Arrests = n()) %>%
+  na_if("") %>%
+  mutate(Number_Arrests = Number_Arrests/1000000)
+
+ggplot(data = nyc_arrests_type, aes(x = fct_reorder(LAW_CAT_CD, Number_Arrests, .desc = TRUE), y = Number_Arrests)) + 
+  geom_col() + labs(title = "Number of Arrests by Arrest Type",
+                    x = "Arrest Type",
+                    y = "Number of Arrests (in Millions)")
+```
+
+From the bar plot above, we can see that misdemeanor is the most common type of arrest in our dataset with over 2 million arrests that were related to misdemeanor charges. Felony is the next most common type of arrest with just under 1 million arrests while violations only account for around 200,000 arrests. There is also a small portion of arrests classified as `I`, but it is not exactly clear from the data dictionary what that stands for. There were also a small amount of arrests that did not have a `LAW_CAT_CD`, so these were categorized as `NA` in our plot. 
+
 ```{r setup}
 # Initial setup and dataset preparation.
 knitr::opts_chunk$set(echo = TRUE)
@@ -118,21 +152,7 @@ ggplot(data = nyc_arrests_type, aes(x = fct_reorder(LAW_CAT_CD, Number_Arrests, 
 From the bar plot above, we can see that misdemeanor is the most common type of arrest in our dataset with over 2 million arrests that were related to misdemeanor charges. Felony is the next most common type of arrest with just under 1 million arrests while violations only account for around 200,000 arrests. There is also a small portion of arrests classified as `I`, but it is not exactly clear from the data dictionary what that stands for. There were also a small amount of arrests that did not have a `LAW_CAT_CD`, so these were categorized as `NA` in our plot. 
 
 
-Since we are using data from the past 10 years, we are interested in seeing how the number of arrests has changed over the past 10 years. The bar plot below shows the number of arrests that occured each year since 2011.
 
-```{r}
-nyc_arrests_year <- nyc_arrests_combined %>%
-  mutate(ARREST_YEAR = format(ARREST_DATE, format = "%Y")) %>%
-  group_by(ARREST_YEAR) %>%
-  summarize(Number_Arrests = n())
-
-ggplot(data = nyc_arrests_year, aes(x = ARREST_YEAR, y = Number_Arrests)) + geom_col() +
-  labs(title = "Number of Arrests by Year",
-       x = "Year",
-       y = "Number of Arrests")
-```
-
-From the plot above, we can see that the number of arrests has decreased each year for the past 10 years. The decrease in arrests is very significant as well since there were over 400,000 arrests in 2011 while there were under 150,000 arrests in 2020 and just over 100,000 arrests so far in 2021. It seems likely that the impact of COVID-19 has helped decrease the number of arrests in 2020 and 2021, especially in 2020 with so many things being shutdown. It will be interesting to see if the number of arrests in 2021 is larger than the 2020 which would be a deviation from the trend of arrests going down. While this plot indicates progress in terms of safety in New York, it will be interesting to see if the number of crimes has dropped significantly as well.  
 
 ```{r}
 nyc_arrests_perp <- nyc_arrests_combined %>%
@@ -147,5 +167,36 @@ nyc_arrests_perp <- nyc_arrests_combined %>%
 
 ggplot(data = nyc_arrests_perp, aes(x = PERP_RACE, y = Number_Arrests)) + geom_col()
 
+```
+
+
+
+```{r}
+nyc_arrests_biggest_months <- nyc_arrests_combined %>%
+  mutate(ARREST_YEAR = format(ARREST_DATE, format = "%Y"),
+         ARREST_MONTH = format(ARREST_DATE, format = "%m")) %>%
+  group_by(ARREST_MONTH, ARREST_YEAR) %>%
+  summarize(Number_Arrests = n())
+
+
+ggplot(data = nyc_arrests_biggest_months, aes(x = ARREST_MONTH, y = Number_Arrests)) + geom_col() + facet_wrap(~ ARREST_YEAR)
+```
+
+
+```{r, fig.width=8, fig.height = 8}
+library(parcoords)
+nyc_coords <- nyc_arrests_categories_simple %>%
+  group_by(County) %>%
+  summarize(Murder = sum(Murder),
+            Rape = sum(Rape),
+            Aggravated.Assault = sum(Aggravated.Assault),
+            Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft))
+  
+parcoords(data = nyc_coords, rownames = FALSE, reorderable = TRUE, brushMode = '1D-axes', color = list(
+        colorBy = "County", 
+        colorScale = "scaleOrdinal", 
+        colorScheme = "schemeCategory10"
+      ), 
+      withD3 = TRUE)
 ```
 
